# resai

./: .gitignore  README.md
docker/: Dockerfile  Dockerfile.postgres  README.md  docker-compose.yml  init.sql  postgresql.conf
infra/aws/: README.md  resai-stack.yaml
langchain/: README.md  pyproject.toml
langchain/app/: server.py
notebooks/: README.md  deeplake.ipynb  demo.ipynb  fanduel.ipynb  fin570.ipynb  fin570_final_2023.ipynb  fin_1.ipynb  gpt-qna-docs.ipynb  meeting-assistant.ipynb  pgvector.ipynb  supabase.ipynb
py/: README.md  pyproject.toml
py/docker/: Dockerfile
py/src/: api.py  reqmodel.py  server.py  test_forms.py  test_indexer.py  test_search.py  test_storage.py  test_trans_files.py  test_vision.py
py/src/resai/: chat.py  indexer.py  pgutil.py  search.py  storage.py
py/src/resai/azure/: forms.py  pdf.py  search.py  storage.py  vision.py
sql/: resai.model.sql
svelte/: README.md  mdsvex.config.js  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs
svelte/src/: app.d.ts  app.html  app.postcss  hooks.server.ts
svelte/src/lib/: CodeMarkdownTest.md
svelte/src/lib/components/chat/: Chat.svelte  ChatBlock.svelte
svelte/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +layout.ts  +page.server.ts  +page.svelte  styles.css
svelte/src/routes/about/: +page.svelte
svelte/src/routes/chat/: +page.svelte
svelte/src/routes/forms/: +page.svelte
svelte/src/routes/login/: +page.server.ts  +page.svelte
svelte/src/routes/register/: +page.server.ts  +page.svelte
svelte/src/routes/search/: +page.server.ts  +page.svelte
svelte/src/routes/storage/: +page.svelte
(+20 files in other folders)
